--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+    </style>
 </head>
 <body>
         <nav>
                 <a href="">inicio</a>
                 <a href="">Blog</a>
                 <a href="">A cerca</a>
+                <img src="Imagenes/city.gif" alt="">
                 </nav>
 </body>
 </html>
