--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="">inicio</a>
                 <a href="">Blog</a>
                 <a href="">A cerca</a>
-                <img src="Imagenes/city.gif" alt="">
+                <img src="Imagenes/city.gif" alt="Carro">
                 </nav>
 </body>
 </html>
