--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <a href="">Blog</a>
                 <a href="">A cerca</a>
                 <img src="Imagenes/city.gif" alt="Carro">
+                <img src="Imagenes/surf.gif" alt="Carro">
                 </nav>
 </body>
 </html>
